envoy-proxy-tls.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9091 }
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                    - "simulation.terrarium.ai"
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: echo_service
                          max_grpc_timeout: 0s
                    cors:
                      allow_origin:
                        - "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,auth-token,auth-secret,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
                      enabled: true
              http_filters:
                - name: envoy.grpc_web
                - name: envoy.cors
                - name: envoy.router
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/simulation-terrarium-ai.crt"
                  private_key:
                    filename: "/etc/simulation-terrarium-ai.key"
              validation_context:
                trusted_ca:
                  filename: /etc/ssl/certs/ca-certificates.crt
  clusters:
    - name: echo_service
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts:
        [
          {
            socket_address: { address: sim-dep.default.svc.cluster.local, port_value: 9090 },
          },
        ]
